src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>DonorApi__Last_Gift_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated Field** Calculates the amount of the last gift received from the related contact.</description>
        <inlineHelpText>**System Calculated Field** Calculates the amount of the last gift received from the related contact.</inlineHelpText>
        <label>Last Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DonorApi__Last_Gift_Date__c</fullName>
        <description>**System Calculated Field** Calculates the last gift date for all related gifts.</description>
        <inlineHelpText>**System Calculated Field** Calculates the last gift date for all related gifts.</inlineHelpText>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DonorApi__Personal_Greeting__c</fullName>
        <description>Personal greeting to be used for communications and solicitations to the contact.</description>
        <inlineHelpText>Personal greeting to be used for communications and solicitations to the contact.</inlineHelpText>
        <label>Personal Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Personal_Recognition_Name__c</fullName>
        <description>If this person gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</description>
        <inlineHelpText>If this person gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</inlineHelpText>
        <label>Personal Recognition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonorApi__Primary_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the person who is responsible for owning this relationship with this constituent. This will create a new record in this contacts relationship related list.</description>
        <inlineHelpText>Select the person who is responsible for owning this relationship with this constituent. This will create a new record in this contacts relationship related list.</inlineHelpText>
        <label>Primary Relationship Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationship Manager (Contacts)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates wether this contact is the primary contact for the related account.</description>
        <inlineHelpText>Indicates wether this contact is the primary contact for the related account.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DonorApi__Spouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spouse</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Spouse)</relationshipLabel>
        <relationshipName>Spouse_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonorApi__Suffix__c</fullName>
        <description>List of common academic, honorary, professional, and generational suffixes.</description>
        <inlineHelpText>List of common academic, honorary, professional, and generational suffixes.</inlineHelpText>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Esq.</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Ret.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonorDrive_ID_aacr__c</fullName>
        <externalId>true</externalId>
        <label>DonorDrive ID aacr</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Donor_Roll_Legacy__c</fullName>
        <description>Houses legacy field data from IMIS called &quot;Donor Roll&quot; that cannot exist in a formula field (JAR).</description>
        <label>Donor Roll Legacy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Roll__c</fullName>
        <description>Foundation field to be leveraged in a website listing elsewhere (JAR).</description>
        <formula>IF(TEXT( Salutation ) == NULL, FirstName + &apos; &apos; + MiddleName + &apos; &apos; + LastName + &apos; &apos; + Suffix_Text__c , TEXT(Salutation) + &apos; &apos; + FirstName + &apos; &apos; + MiddleName + &apos; &apos; + LastName + &apos; &apos;+ Suffix_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Roll</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Segment__c</fullName>
        <label>Event Segment</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <description>When will the individual complete their academic degree?</description>
        <inlineHelpText>When will the individual complete their academic degree?</inlineHelpText>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family_Member_with_Cancer__c</fullName>
        <description>Identifies that an advocate has a family member with cancer.</description>
        <inlineHelpText>Identifies that an advocate has a family member with cancer.</inlineHelpText>
        <label>Family Member with Cancer?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formerly_Known_As__c</fullName>
        <label>Formerly Known As</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this individual donated to the AACR?</inlineHelpText>
        <label>Foundation - Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the contact.</description>
        <inlineHelpText>Gender of the contact.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                    <label>Prefer Not to Answer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hear_About_AACR__c</fullName>
        <label>How did you hear about the AACR?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Highest_Degree__c</fullName>
        <label>Highest Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degrees_Held_Global_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Level__c</fullName>
        <description>Income level based upon country of origin; reflects iMIS&apos; original Category field.</description>
        <inlineHelpText>The income level of contact based upon country.</inlineHelpText>
        <label>World Bank Income Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Income</fullName>
                    <default>true</default>
                    <label>High Income</label>
                </value>
                <value>
                    <fullName>Upper Middle Income</fullName>
                </value>
                <value>
                    <fullName>Lower Middle Income</fullName>
                </value>
                <value>
                    <fullName>Low Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Join_Date__c</fullName>
        <label>Initial Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Institution_Company_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <description>Historical reflection of iMIS data on the contact object. This field will be read only.</description>
        <label>Institution Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Journal_Addr_Same_As_Preferred_Addr__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Journal Addr Same As Preferred Addr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal_City__c</fullName>
        <label>Journal City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Country__c</fullName>
        <label>Journal Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Journal Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal_Email__c</fullName>
        <label>Journal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Journal_State_Province__c</fullName>
        <label>Journal State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Street__c</fullName>
        <description>Address where member would prefer their printed journals to be sent.</description>
        <inlineHelpText>Address where member would prefer their printed journals to be sent.</inlineHelpText>
        <label>Journal Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Journal_Zip_Postal_Code__c</fullName>
        <label>Journal Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_List_Reason__c</fullName>
        <description>The reason for this lead list.</description>
        <label>Lead List Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_List_Requestor__c</fullName>
        <description>Used to track which AACR BU requested leads to be loaded as contacts</description>
        <label>Lead List Requestor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_Requestor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Focus__c</fullName>
        <description>Describes major focus of the contact.</description>
        <inlineHelpText>Describes major focus of the contact.</inlineHelpText>
        <label>Major Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Basic Research</fullName>
                </value>
                <value>
                    <fullName>Basic Science</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Clinical Practice</fullName>
                </value>
                <value>
                    <fullName>Clinical Research</fullName>
                </value>
                <value>
                    <fullName>Population Science</fullName>
                </value>
                <value>
                    <fullName>Research Administration</fullName>
                </value>
                <value>
                    <fullName>Science Education</fullName>
                </value>
                <value>
                    <fullName>Translational Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Segment_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Segment Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Preferences__c</fullName>
        <formula>HYPERLINK(&quot;http://uat-aacr.cs195.force.com/DW_MarketingPreferences&quot;, &quot;Edit&quot;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Preferences</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <description>Indicates what level of membership this individual possesses.</description>
        <inlineHelpText>Indicates what level of membership this individual possesses.</inlineHelpText>
        <label>Member Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Id__c</fullName>
        <inlineHelpText>This field in JP to get the membership type that user has selected. In hidden form field we will map membership type to this field and after custom nomination page remove data from this field.</inlineHelpText>
        <label>Membership Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Information__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Membership Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <description>Identifies the current membership status of an individual.</description>
        <inlineHelpText>What is the current status of this member?</inlineHelpText>
        <label>Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nonmember</fullName>
                    <default>true</default>
                    <label>Nonmember</label>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Candidate_Incomplete</fullName>
                    <label>Candidate - Incomplete</label>
                </value>
                <value>
                    <fullName>Candidate_Complete</fullName>
                    <label>Candidate - Complete</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>1-YR Suspended</fullName>
                </value>
                <value>
                    <fullName>2-YR Suspended</fullName>
                </value>
                <value>
                    <fullName>Suspended (Delinquent)</fullName>
                </value>
                <value>
                    <fullName>Suspended (Resigned)</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minorities_in_Cancer_Research__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Minorities in Cancer Research</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minority_Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minority Serving Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modify_Groups__c</fullName>
        <formula>HYPERLINK(&quot;https://aacruatf-fontevacustomer-15e958fad93-15f4a97b013.cs97.force.com/DW_WorkingGroups?type=modify&quot; ,&quot;Launch&quot;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modify Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modify_Institution__c</fullName>
        <description>Field to allow for hyperlink &quot;Modify&quot; button on member portal profile.</description>
        <formula>HYPERLINK(&quot;http://uat-aacr.cs195.force.com/UpdateOrganization?id=&quot;&amp; Id ,&quot;Edit&quot;,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Molecular_Epidemiology__c</fullName>
        <description>Marketing Preferences indicator</description>
        <label>Molecular Epidemiology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Nickname of the contact.</description>
        <inlineHelpText>Nickname of the contact.</inlineHelpText>
        <label>Nickname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omit_Household_Label__c</fullName>
        <formula>IF( OR(CONTAINS(  Account.Name  , &apos;Household&apos;), CONTAINS(  Account.Name  , &apos;AACR&apos;)) , &apos;&apos;,  Account.Name )</formula>
        <label>Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Annual_Engagement_Score__c</fullName>
        <description>Aggregates the Contact&apos;s active engagement scores from it&apos;s badge records for the current year.</description>
        <inlineHelpText>Aggregates the Contact&apos;s active engagement scores from it&apos;s badge records for the current year.</inlineHelpText>
        <label>Annual Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assistant_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Assistant Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Assistant Phone.</inlineHelpText>
        <label>Assistant Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assistant_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Contact&apos;s Assistant will not receive email communications.</description>
        <inlineHelpText>The Contact&apos;s Assistant will not receive email communications.</inlineHelpText>
        <label>Assistant Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assistant_Email__c</fullName>
        <description>The Contact&apos;s Assistant Email address.</description>
        <inlineHelpText>The Contact&apos;s Assistant Email address.</inlineHelpText>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Badges__c</fullName>
        <description>This field lists all the active badges in alphabetical order including all badges inherited from it&apos;s parent account or it&apos;s parent account through flowdown (when enabled)</description>
        <inlineHelpText>This field lists all the active badges in alphabetical order including all badges inherited from it&apos;s parent account or it&apos;s parent account through flowdown (when enabled)</inlineHelpText>
        <label>Badges</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Home_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Home Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Home Phone.</inlineHelpText>
        <label>Home Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Primary_Contact__c</fullName>
        <formula>Id == Account.OrderApi__Primary_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Lifetime_Engagement_Score__c</fullName>
        <description>Aggregates the Contact&apos;s active engagement scores from it&apos;s badge records.</description>
        <inlineHelpText>Aggregates the Contact&apos;s active engagement scores from it&apos;s badge records.</inlineHelpText>
        <label>Lifetime Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mobile_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Mobile Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Mobile Phone.</inlineHelpText>
        <label>Mobile Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Other_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Other Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Other Phone.</inlineHelpText>
        <label>Other Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Other_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact will not receive communications to their Other Email.</description>
        <inlineHelpText>Contact will not receive communications to their Other Email.</inlineHelpText>
        <label>Other Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Other_Email__c</fullName>
        <description>Other/Additional Email for the Contact.</description>
        <inlineHelpText>Other/Additional Email for the Contact.</inlineHelpText>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Outstanding_Credits__c</fullName>
        <description>** System Calculated ** The sum of the Credit Memo Balance Due field for all Credit Memos linked to this customer.</description>
        <inlineHelpText>** System Calculated ** The sum of the Credit Memo Balance Due field for all Credit Memos linked to this customer.</inlineHelpText>
        <label>Outstanding Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Personal_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact will not receive communications to their Personal Email.</description>
        <inlineHelpText>Contact will not receive communications to their Personal Email.</inlineHelpText>
        <label>Personal Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Personal_Email__c</fullName>
        <description>Personal/Home Email address for the Contact.</description>
        <inlineHelpText>Personal/Home Email address for the Contact.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__Potential_Duplicate_Contacts__c</fullName>
        <label>Potential Duplicate Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Preferred_Email_Type__c</fullName>
        <description>**Defaults to Personal Email** Select the Preferred Email Type for the Contact. The value of the corresponding email field will update the standard Contact Email field.</description>
        <inlineHelpText>**Defaults to Work Email** Select the Preferred Email Type for the Contact. The value of the corresponding email field will update the standard Contact Email field.</inlineHelpText>
        <label>Preferred Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                    <default>true</default>
                    <label>Work</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Preferred_Email__c</fullName>
        <description>**System Calculated** The Preferred Email for the Contact is calculated by mapping the Preferred Email Type to it&apos;s corresponding field&apos;s value.</description>
        <formula>IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,&quot;Personal&quot;) &amp;&amp; NOT(OrderApi__Personal_Email_Opt_Out__c), OrderApi__Personal_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,&quot;Work&quot;) &amp;&amp; NOT(OrderApi__Work_Email_Opt_Out__c), OrderApi__Work_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,&quot;Other&quot;) &amp;&amp; NOT(OrderApi__Other_Email_Opt_Out__c),OrderApi__Other_Email__c,
IF(ISPICKVAL(OrderApi__Preferred_Email_Type__c,&quot;Assistant&quot;) &amp;&amp; NOT(OrderApi__Assistant_Email_Opt_Out__c),OrderApi__Assistant_Email__c, &apos;&apos;))))</formula>
        <inlineHelpText>**System Calculated** The Preferred Email for the Contact is calculated by mapping the Preferred Email Type to it&apos;s corresponding field&apos;s value.</inlineHelpText>
        <label>Preferred Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Preferred_Phone_Type__c</fullName>
        <description>**Defaults to Personal Email** Select the Preferred Phone Type for the Contact. The value of the corresponding phone field will update the standard Contact Phone field.</description>
        <inlineHelpText>**Defaults to Work Phone** Select the Preferred Phone Type for the Contact. The value of the corresponding phone field will update the standard Contact Phone field.</inlineHelpText>
        <label>Preferred Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                    <default>true</default>
                    <label>Work</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Preferred_Phone__c</fullName>
        <description>**System Calculated** The Preferred Phone for the Contact is calculated by mapping the Preferred Phone Type to it&apos;s corresponding field&apos;s value.</description>
        <formula>IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Mobile&quot;) &amp;&amp; NOT(OrderApi__Mobile_Do_Not_Call__c), MobilePhone,
IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Home&quot;) &amp;&amp; NOT(OrderApi__Home_Do_Not_Call__c), HomePhone,
IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Work&quot;) &amp;&amp; NOT(OrderApi__Work_Do_Not_Call__c),OrderApi__Work_Phone__c,
IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Other&quot;) &amp;&amp; NOT(OrderApi__Other_Do_Not_Call__c),OtherPhone,
IF(ISPICKVAL(OrderApi__Preferred_Phone_Type__c,&quot;Assistant&quot;) &amp;&amp; NOT(OrderApi__Assistant_Do_Not_Call__c),AssistantPhone,
&apos;&apos;)))))</formula>
        <inlineHelpText>**System Calculated** The Preferred Phone for the Contact is calculated by mapping the Preferred Phone Type to it&apos;s corresponding field&apos;s value.</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rules_Usages__c</fullName>
        <description>** SYSTEM ** JSON of price rules</description>
        <inlineHelpText>** SYSTEM ** JSON of price rules</inlineHelpText>
        <label>SYSTEM</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Privacy_Settings__c</fullName>
        <description>**Defaults to private** This field sets the visibility settings when contact search is enabled.
            Public: Any user in the system can search. Private: Searchable by authenticated users only. Unlisted: Can not be searched at all.</description>
        <inlineHelpText>**Defaults to private** This field sets the visibility settings when contact search is enabled.
            Public: Any user in the system can search. Private: Searchable by authenticated users only. Unlisted: Can not be searched at all.</inlineHelpText>
        <label>Privacy Settings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>public</fullName>
                </value>
                <value>
                    <fullName>private</fullName>
                    <default>true</default>
                    <label>private</label>
                </value>
                <value>
                    <fullName>unlisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Sync_Address_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will overwrite the parent account&apos;s billing address with the value of the contact&apos;s mailing address. Default is unchecked.</description>
        <inlineHelpText>When checked, the system will overwrite the parent account&apos;s billing address with the value of the contact&apos;s mailing address. Default is unchecked.</inlineHelpText>
        <label>Sync Address w/Account (Billing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sync_Address_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will overwrite the parent account&apos;s shipping address with the value of the contact&apos;s mailing address. Default is unchecked.</description>
        <inlineHelpText>When checked, the system will overwrite the parent account&apos;s shipping address with the value of the contact&apos;s mailing address. Default is unchecked.</inlineHelpText>
        <label>Sync Address w/Account (Shipping)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sync_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will overwrite the parent account&apos;s phone with the value of the contact&apos;s preferred phone. Default is unchecked.</description>
        <inlineHelpText>When checked, the system will overwrite the parent account&apos;s phone with the value of the contact&apos;s preferred phone. Default is unchecked.</inlineHelpText>
        <label>Sync Preferred Email w/Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sync_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will overwrite the parent account&apos;s phone with the value of the contact&apos;s preferred phone. Default is unchecked.</description>
        <inlineHelpText>When checked, the system will overwrite the parent account&apos;s phone with the value of the contact&apos;s preferred phone. Default is unchecked.</inlineHelpText>
        <label>Sync Preferred Phone w/Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Work_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Call the Contact&apos;s Work Phone.</description>
        <inlineHelpText>Do Not Call the Contact&apos;s Work Phone.</inlineHelpText>
        <label>Work Do Not Call</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>